<resources>
    <string name="app_name">CA1-MainScreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_up">Sign Up</string>
    <string name="ps">Privacy &amp; Security</string>
    <string name="lth">Lean, toned &amp; healthy</string>
    <string name="msg_token_fmt">FCM Token: %1$s</string>
    <string name="ld">Listen &amp; Digest!</string>
    <string name="channel_name">My Notification Channel</string>
    <string name="channel_description">Description for my notification channel</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>