<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:text="@string/login"
        android:textSize="45sp"
        android:textStyle="bold"
        android:gravity="left"
        android:layout_marginBottom="180dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textStyle="italic"
        android:layout_marginTop="-170dp"
        android:text="@string/welcome_back"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:startIconDrawable="@drawable/ic_email">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"/>
</com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/clear_icon"
       >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="Forget Password?"
        android:layout_marginTop="10dp"
        android:textColor="@color/red_color"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:layout_marginTop="100dp"
        android:text="Log in"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/rounded_button"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="268dp"
        android:layout_height="33dp"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="Don't have an account? Sign Up here"
        android:textSize="16sp" />

</LinearLayout>